wimp/src/wimp_instruction.h


///
/// @brief The reserved core instructions for WIMP - Hashed before compile time.
/// Can create a hash with this online tool: https://onecompiler.com/c/42raj2ktm.
/// Instructions can be any 64-bit integer however any string->instruction 
/// operation will only work if the instruction was hashed from the original string.
/// 
enum WIMPInstructionsCore
{
    WIMP_INSTRUCTION_EXIT             = 1540385UL,     ///< Signals the target process and it's children to exit ("exit")
    WIMP_INSTRUCTION_LOG              = 161821UL,      ///< Signals a logging instruction ("log")
    WIMP_INSTRUCTION_PING             = 1446181UL,     ///< Used for checking a server is still listening ("ping")
    WIMP_INSTRUCTION_HANDSHAKE_STATUS = 27140846854UL, ///< Used for determining if a server has correctly connected ("h_status")
};

/// @brief The result of a WIMP instruction operation
enum WimpInstructionResult
{
    WIMP_INSTRUCTION_SUCCESS = 0, ///< Result if instruction operation is successful
    WIMP_INSTRUCTION_FAIL    = -1 ///< Result if instruction operation fails for an unspecified reason
};


/// @brief A node used in the instruction queues
typedef struct _WimpInstrNode *WimpInstrNode;


/// @brief Defines a linked list instruction queue
typedef struct _WimpInstrQueue
{
    WimpInstrNode nextnode; ///< The next node, if one exists
    WimpInstrNode backnode; ///< The end node, if one exists
    PMutex* _datamutex;
    PMutex* _nextmutex;
    PMutex* _lowpriomutex;  //Uses the triple mutex pattern
} WimpInstrQueue;

///
/// @brief Contiguous pack of strings with automatic null termination
///
/// Provides an easy way to send multiple string arguments
/// - Strings are stored in the same memory chunk as the pack data for easy copying
/// - Strings are given as offsets to avoid pointer invalidation
///
typedef struct _WimpStrPack
{
    size_t pack_size;                            ///< The size of the total pack
    size_t str_count;                            ///< The number of strings in the pack
    size_t strings[WIMP_STR_PACK_MAX_STRINGS];   ///< The offsets of each string, up to WIMP_STR_PACK_MAX_STRINGS length
} *WimpStrPack;


///
/// @brief Instruction metadata that can be pulled from a buffer
///
typedef struct _WimpInstrMeta
{
    const char* source_process;  ///< Name of the source process
    const char* dest_process;    ///< Name of the destination process
    uint64_t instr;              ///< Instruction value
    void* args;                  ///< Pointer to the arguments
    size_t total_bytes;          ///< Total size in bytes of the instruction
    int32_t arg_bytes;           ///< Total size in bytes of the arguments only
    int32_t instr_bytes;         ///< Total size in bytes of the instruction only
} WimpInstrMeta;


///
/// @brief The runtime equivalent of the wimp instruction hasher. 
/// Is not cryptographically secure, but will create a unique ID.
///
/// @param text The text instruction to hash
///
/// @return Returns the 64 bit hash of the instruction
///
WIMP_API uint64_t wimp_instr(const char *text);


///
/// @brief Frees the memory used for the queue node
/// 
/// @param node The node pointer to free
///
WIMP_API void wimp_instr_node_free(WimpInstrNode node);


///
/// @brief Gets an instruction metadata from a buffer
///
/// Assumes buffer starts at start of an instruction
///
/// @param buffer The buffer to extract from
/// @param buffsize The buffer size to extract in bytes
///
/// @return Returns the metadata of the instruction
///
WIMP_API WimpInstrMeta wimp_instr_get_from_buffer(uint8_t* buffer, size_t buffsize);


///
/// @brief Extracts the wimp instruction metadata from a node.
///
/// @param node The node to extract from
///
/// @return Returns the metadata of the instruction
///
WIMP_API WimpInstrMeta wimp_instr_get_from_node(WimpInstrNode node);


///
/// @brief Compares two instructions to check if they're the same
/// 
/// @param instr1 The first instruction
/// @param instr2 The second instruction
/// 
/// @return Returns whether the instructions match or not
///
WIMP_API bool wimp_instr_check(uint64_t instr1, uint64_t instr2);


///
/// @brief Counts the amount of instructions with a given name in the queue
/// 
/// @param queue The queue to count the instructions in
/// 
/// @return Returns the instruction count
///
WIMP_API size_t wimp_instr_get_instruction_count(WimpInstrQueue* queue, uint64_t instruction);


///
/// @brief Packs a collection of up to WIMP_STR_PACK_MAX_STRINGS strings
/// 
/// @param count The number of strings
/// @param ... The strings to pack
/// 
/// @return Returns a pointer to the packed strings interface
///
WIMP_API WimpStrPack wimp_instr_pack_strings(size_t count, ...);


///
/// @brief Gets a string at a given index from the string pack
/// 
/// @param pack The pack to get the string from
/// @param index The index of the string
/// 
/// @return Returns the C style string pointer
///
WIMP_API char* wimp_instr_pack_get_string(WimpStrPack pack, int32_t index);


///
/// @brief Frees a string pack allocated with pack strings
/// 
/// This doesn't need to be called when a pack is retrieved from an instruction
/// 
/// @param pack A pointer to the pack to free
///
WIMP_API void wimp_instr_pack_free(WimpStrPack* pack);