wimp/src/wimp_server.h


/// @brief The result of wimp server operations
enum WimpServerResult
{
    WIMP_SERVER_SUCCESS            =  0, ///< Result if server operation is successful
    WIMP_SERVER_FAIL                = -1,///< Result if server operation fails for an unspecified reason
    WIMP_SERVER_ADDRESS_FAIL       = -2, ///< Result if server fails to create a new address
    WIMP_SERVER_SOCKET_FAIL        = -3, ///< Result if server fails to create a new socket
    WIMP_SERVER_BIND_FAIL          = -4, ///< Result if server fails to bind it's socket
    WIMP_SERVER_LISTEN_FAIL        = -5, ///< Result if server socket fails to listen
    WIMP_SERVER_TOO_FEW_PROCESSES  = -6, ///< Result if fewer processes than expected attempt to accept
    WIMP_SERVER_UNEXPECTED_PROCESS = -7, ///< Result if an unexpected process attempts to accept
};


///
/// @brief The struct containing the WIMP server information
///
/// Is created with wimp_create_server(...) and destroyed with wimp_server_free(...)
/// It is recommended to use a local server for most use cases as each thread should
/// really only have one server.
///
typedef struct _WimpServer
{
    sds process_name;       ///< Name of the server
    PSocketAddress* addr;   ///< Server address structure
    PSocket* server;        ///< Server socket pointer
    WimpProcessTable ptable;///< Process table tracking connected processes
    sds parent;             ///< Name of the parent process - is null when no parent exists

    //Ingoing and outgoing msg queues
    WimpInstrQueue incomingmsg; ///< Incoming message queue
    WimpInstrQueue outgoingmsg; ///< Outgoing message queue

    //Buffers for writing/reading
    WimpMsgBuffer sendbuffer; ///< Sending buffer
    WimpMsgBuffer recbuffer;  ///< Recieving buffer

    int32_t active; ///< The active status of the server

} WimpServer;


///
/// @brief Gets the local thread server
/// 
/// @return Returns the handle to the threads local server. Is null if uninitialized.
///
WIMP_API WimpServer* wimp_get_local_server(void);


/// 
/// @brief Initializes the local server
///
/// Server must be closed afterwards with wimp_close_local_server() .
/// The local thread server provides an easy point of contact for sending instructions.
/// 
/// @param process_name The name of the process running on the server
/// @param domain The domain for the server to run on
/// @param port The port for the server to run on
/// @param parent The parent process name (e.g. master process) - may be NULL if is not a child
/// 
/// @return Returns a WimpServerResult enum
///
WIMP_API int32_t wimp_init_local_server(const char* process_name, const char* domain, int32_t port);


///
/// @brief Closes the local server
///
WIMP_API void wimp_close_local_server(void);


///
/// @brief Adds instructions to the local server outgoing queue
/// 
/// @param dest The name of the destination process
/// @param instr The instruction
/// @param args Any additional arguments to be copied
/// @param arg_size_bytes The size of any arguments to copy
///
WIMP_API void wimp_add_local_server(const char* dest, uint64_t instr, const void* args, size_t arg_size_bytes);


///
/// @brief Accepts valid processes connecting to the server
///
/// Blocks until completion. Only allows the connections specified with ...
/// 
/// @param server The server to accept a connection to
/// @param pcount The number of processes to accept
/// @param ... The names of the processes to accept
/// 
/// @return Returns a WimpServerResult enum
///
WIMP_API int32_t wimp_server_process_accept(WimpServer* server, int pcount, ...);


///
/// @brief Checks if a process is still connected
///
/// Validates whether a given connection is still active by making a zero byte send call
/// 
/// @param server The server to accept a connection to
/// @param process_name The name of the expected process for validation
/// 
/// @return Returns true if the connection exists still, false otherwise
///
WIMP_API bool wimp_server_check_process_listening(WimpServer* server, const char* process_name);


///
/// @brief Waits until the specified instruction is recieved
///
/// Awaits the server to recieve a specific instruction. Blocks and must not be
/// called when queue mutexes are already locked!
/// 
/// @param server The server to await the response to
/// @param instr The instruction to await
/// @param timeout The timeout in milliseconds before returning back
/// 
/// @return Returns the node of the awaited instruction. Returns NULL if failed.
/// The node should be freed after using.
///
WIMP_API WimpInstrNode wimp_server_wait_response(WimpServer* server, uint64_t instr, int32_t timeout);


///
/// @brief Sends the instructions in the outgoing queue
/// 
/// @param server The server to send instructions from
///
WIMP_API int32_t wimp_server_send_instructions(WimpServer* server);