wimp/src/wimp_process.h


/*
* Is a wrapper for the normal entry args so can be called from a
* thread.
*/
typedef struct _WimpMainEntry
{
	char** argv;
	int argc;
} *WimpMainEntry;


/*
* Starts the wimp library
*
* @return Returns either WIMP_PROCESS_SUCCESS or WIMP_PROCESS_FAIL
*/
int32_t wimp_init();


/*
* Shuts down the wimp library
*/
void wimp_shutdown();


/*
* Starts an executable process
* 
* Currently uses a very crude path locating think - TODO embed cwalk into the library
* 
* @param process_name The name of the process to create
* @param executable The executable relative to the location the program binary is running from (e.g. bin directory)
* @param entry The entry arguments
* 
* @return Returns either WIMP_PROCESS_SUCCESS or WIMP_PROCESS_FAIL
*/
int32_t wimp_start_executable_process(const char* process_name, const char* executable, WimpMainEntry entry);


/*
* Creates a persistent collection of arguments to supply, which can be freed after the library main thread is finished
* 
* @param argc The number of arguments supplied
* @param ... The arguments, which must be null terminated strings
* 
* @return Returns the entry arguments
*/
WimpMainEntry wimp_get_entry(int32_t argc, ...);


/*
* Frees the entry - must be done in the child thread
* 
* @param entry The entry arguments
*/
void wimp_free_entry(WimpMainEntry entry);


/*
* Gets an unused local port from the OS by binding a dummy socket
* 
* @return Returns the port number if successful, otherwise returns WIMP_PROCESS_FAIL
*/
int32_t wimp_assign_unused_local_port(void);